@@ -20,8 +20,6 @@
 package com.simiacryptus.mindseye.eval;
 
 import com.simiacryptus.mindseye.lang.*;
-import com.simiacryptus.mindseye.lang.cudnn.CudaPtr;
-import com.simiacryptus.mindseye.lang.cudnn.GpuSystem;
 import com.simiacryptus.mindseye.layers.java.PlaceholderLayer;
 import com.simiacryptus.mindseye.opt.TrainingMonitor;
 import com.simiacryptus.util.lang.TimedResult;
@@ -29,7 +27,6 @@ import com.simiacryptus.util.lang.TimedResult;
 import java.util.Arrays;
 import java.util.DoubleSummaryStatistics;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
 import java.util.stream.IntStream;
 
 /**
@@ -48,21 +45,9 @@ public class BasicTrainable extends ReferenceCountingBase implements DataTrainab
   protected List<Tensor[]> data;
   
   /**
-   * Between each iteration we have the option to initiate a garbage collection. This is a good opportunity since the
-   * reachable object count will be at a minimum between collections, making GC more efficient. This can be configured
-   * as a non-blocking operation by using the JVM flags "-XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC"
-   */
-  protected boolean gcEachIteration = true;
-  
-  /**
-   * The Gc period.
-   */
-  protected double gcPeriod = 5.0;
-  /**
    * The Mask.
    */
   boolean[] mask = null;
-  private long lastGc = 0;
   private int verbosity = 0;
   
   /**
@@ -72,6 +57,7 @@ public class BasicTrainable extends ReferenceCountingBase implements DataTrainab
    */
   public BasicTrainable(final NNLayer network) {
     this.network = network;
+    this.network.addRef();
     data = null;
   }
   
@@ -159,50 +145,9 @@ public class BasicTrainable extends ReferenceCountingBase implements DataTrainab
     return data.toArray(new Tensor[][]{});
   }
   
-  /**
-   * Gets gc period.
-   *
-   * @return the gc period
-   */
-  public double getGcPeriod() {
-    return gcPeriod;
-  }
-  
-  /**
-   * Sets gc period.
-   *
-   * @param gcPeriod the gc period
-   */
-  public void setGcPeriod(final double gcPeriod) {
-    this.gcPeriod = gcPeriod;
-  }
-  
   @Override
   public boolean[] getMask() {
     return mask;
-  }
-  
-  /**
-   * Is gc each iteration boolean.
-   *
-   * @return the boolean
-   */
-  public boolean isGcEachIteration() {
-    return gcEachIteration;
-  }
-  
-  /**
-   * Sets gc each iteration.
-   *
-   * @param gcEachIteration the gc each iteration
-   */
-  public void setGcEachIteration(final boolean gcEachIteration) {
-    this.gcEachIteration = gcEachIteration;
-  }
-  
-  @Override
-  public PointSample measure(final TrainingMonitor monitor) {
-    return measure(3, monitor);
   }
   
   @Override
@@ -213,47 +158,23 @@ public class BasicTrainable extends ReferenceCountingBase implements DataTrainab
   /**
    * Measure point sample.
    *
-   * @param retries the retries
    * @param monitor the monitor
    * @return the point sample
    */
-  public PointSample measure(final int retries, final TrainingMonitor monitor) {
-    try {
-      assert !data.isEmpty();
-  
-      final TimedResult<PointSample> timedResult = TimedResult.time(() -> eval(data, monitor));
-      //          log.info(String.format("Evaluated to %s delta arrays", DeltaSet<NNLayer>.run.size()));
-      if (null != monitor && verbosity() > 1) {
-        monitor.log(String.format("Evaluated %s items in %.4fs (%s/%s)", data.size(), timedResult.timeNanos / 1e9, timedResult.result.getMean(), timedResult.result.delta.getMagnitude()));
-      }
-      assert null != timedResult.result;
-      // Between each iteration is a great time to collect garbage, since the reachable object count will be at a low point.
-      // Recommended JVM flags: -XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC
-      if (gcEachIteration && TimeUnit.MILLISECONDS.toSeconds(System.currentTimeMillis() - lastGc) > gcPeriod) {
-        lastGc = System.currentTimeMillis();
-        GpuSystem.cleanMemory();
-      }
-      return timedResult.result;
-    } catch (final Exception e) {
-      RecycleBin.DOUBLES.printNetProfiling(System.err);
-      if (retries > 0) {
-        lastGc = System.currentTimeMillis();
-        GpuSystem.cleanMemory();
-        CudaPtr.METRICS.invalidateAll();
-        if (gcEachIteration && TimeUnit.MILLISECONDS.toSeconds(System.currentTimeMillis() - lastGc) > gcPeriod) {
-          lastGc = System.currentTimeMillis();
-          GpuSystem.cleanMemory();
-        }
-        return measure(retries - 1, monitor);
-      }
-      else {
-        throw e;
-      }
+  @Override
+  public PointSample measure(final TrainingMonitor monitor) {
+    assert !data.isEmpty();
+    final TimedResult<PointSample> timedResult = TimedResult.time(() -> eval(data, monitor));
+    //          log.info(String.format("Evaluated to %s delta arrays", DeltaSet<NNLayer>.run.size()));
+    if (null != monitor && verbosity() > 1) {
+      monitor.log(String.format("Evaluated %s items in %.4fs (%s/%s)", data.size(), timedResult.timeNanos / 1e9, timedResult.result.getMean(), timedResult.result.delta.getMagnitude()));
     }
+    assert null != timedResult.result;
+    return timedResult.result;
   }
   
   @Override
-  public Trainable setData(final List<Tensor[]> sampledData) {
+  public synchronized Trainable setData(final List<Tensor[]> sampledData) {
     assert !sampledData.isEmpty();
     sampledData.stream().flatMap(x -> Arrays.stream(x)).forEach(x -> x.addRef());
     if (null != this.data) this.data.stream().flatMap(x -> Arrays.stream(x)).forEach(x -> x.freeRef());
